[gd_scene load_steps=5 format=3 uid="uid://dgsurld0567w2"]

[ext_resource type="Script" path="res://potion_screen.gd" id="1_vpdv3"]
[ext_resource type="Texture2D" uid="uid://dx7dc1mvby4k0" path="res://Effetti/pixil-frame-0 (6).png" id="1_wixuu"]
[ext_resource type="Texture2D" uid="uid://dnuwmtojsqxfv" path="res://Effetti/Dialoghi/free-to-use-nine-patch-rect-textures-v0-jlv0yj89wj1a1.webp" id="2_2fcss"]

[sub_resource type="LabelSettings" id="LabelSettings_xmvvn"]
font_size = 17
font_color = Color(0, 0, 0, 1)
outline_color = Color(0, 0, 0, 1)

[node name="PotionScreen" type="Node2D"]
script = ExtResource("1_vpdv3")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1161.0
offset_bottom = 922.0
texture = ExtResource("1_wixuu")

[node name="TextIntro" type="NinePatchRect" parent="."]
offset_left = 29.0
offset_top = 486.0
offset_right = 791.0
offset_bottom = 621.0
texture = ExtResource("2_2fcss")
region_rect = Rect2(4, 400, 128, 128)
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="Label" type="Label" parent="TextIntro"]
texture_filter = 1
layout_mode = 0
offset_left = 24.0
offset_top = 17.0
offset_right = 440.0
offset_bottom = 78.0
scale = Vector2(1.7, 1.7)
theme_override_colors/font_color = Color(0, 0, 0, 1)
label_settings = SubResource("LabelSettings_xmvvn")

[node name="Monster party 1" type="VBoxContainer" parent="."]
offset_left = 163.0
offset_top = 26.0
offset_right = 964.0
offset_bottom = 111.0
alignment = 1

[node name="Button" type="Button" parent="Monster party 1"]
custom_minimum_size = Vector2(495, 85)
layout_mode = 2
focus_neighbor_right = NodePath("../../Monster party 2/Button")
focus_neighbor_bottom = NodePath("../../Monster party 3/Button")

[node name="Monster party 2" type="VBoxContainer" parent="."]
offset_left = 164.0
offset_top = 130.0
offset_right = 965.0
offset_bottom = 215.0
alignment = 1

[node name="Button" type="Button" parent="Monster party 2"]
custom_minimum_size = Vector2(495, 85)
layout_mode = 2
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../Monster party 3/Button")

[node name="Monster party 3" type="VBoxContainer" parent="."]
offset_left = 163.0
offset_top = 231.0
offset_right = 964.0
offset_bottom = 316.0
alignment = 1

[node name="Button" type="Button" parent="Monster party 3"]
custom_minimum_size = Vector2(495, 85)
layout_mode = 2
focus_neighbor_right = NodePath("../../Monster party 2/Button")
focus_neighbor_bottom = NodePath(".")

[node name="Monster party 4" type="VBoxContainer" parent="."]
offset_left = 162.0
offset_top = 329.0
offset_right = 963.0
offset_bottom = 414.0
alignment = 1

[node name="Button" type="Button" parent="Monster party 4"]
custom_minimum_size = Vector2(495, 85)
layout_mode = 2
focus_neighbor_right = NodePath("../../Monster party 2/Button")
focus_neighbor_bottom = NodePath("../../Monster party 3/Button")

[node name="Use" type="BoxContainer" parent="."]
offset_left = 838.0
offset_top = 508.0
offset_right = 1090.0
offset_bottom = 586.0

[node name="Button" type="Button" parent="Use"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Use/Button"]
texture_filter = 1
layout_mode = 0
offset_left = -18.0
offset_right = 92.0
offset_bottom = 31.0
scale = Vector2(2.5, 2.5)
text = "USA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="BoxContainer" parent="."]
visible = false
offset_left = 838.0
offset_top = 508.0
offset_right = 1090.0
offset_bottom = 586.0

[node name="Button" type="Button" parent="Back"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Back/Button"]
texture_filter = 1
layout_mode = 0
offset_left = -28.0
offset_right = 90.0
offset_bottom = 31.0
scale = Vector2(2.5, 2.5)
text = "INDIETRO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Potion 1" type="Node2D" parent="."]
position = Vector2(205, 69)

[node name="Potion 2" type="Node2D" parent="."]
position = Vector2(202, 172)

[node name="Potion 3" type="Node2D" parent="."]
position = Vector2(204, 272)

[node name="Potion 4" type="Node2D" parent="."]
position = Vector2(205, 371)

[node name="Q 1" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = 819.0
offset_top = 42.0
offset_right = 884.0
offset_bottom = 65.0
scale = Vector2(2, 2)
text = "2"

[node name="Q 2" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = 821.0
offset_top = 148.0
offset_right = 886.0
offset_bottom = 171.0
scale = Vector2(2, 2)
text = "2"

[node name="Q 3" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = 821.0
offset_top = 247.0
offset_right = 886.0
offset_bottom = 270.0
scale = Vector2(2, 2)
text = "2"

[node name="Q 4" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = 822.0
offset_top = 350.0
offset_right = 887.0
offset_bottom = 373.0
scale = Vector2(2, 2)
text = "2"

[node name="Info 1" type="Label" parent="."]
texture_filter = 1
offset_left = 311.0
offset_top = 40.0
offset_right = 522.0
offset_bottom = 70.0
scale = Vector2(2, 2)

[node name="Info 2" type="Label" parent="."]
texture_filter = 1
offset_left = 304.0
offset_top = 139.0
offset_right = 515.0
offset_bottom = 169.0
scale = Vector2(2, 2)

[node name="Info 3" type="Label" parent="."]
texture_filter = 1
offset_left = 305.0
offset_top = 241.0
offset_right = 516.0
offset_bottom = 271.0
scale = Vector2(2, 2)

[node name="Info 4" type="Label" parent="."]
texture_filter = 1
offset_left = 304.0
offset_top = 343.0
offset_right = 515.0
offset_bottom = 373.0
scale = Vector2(2, 2)

[node name="Monster_screen" type="NinePatchRect" parent="."]
offset_left = 820.0
offset_top = 20.0
offset_right = 1112.0
offset_bottom = 488.0
texture = ExtResource("2_2fcss")
region_rect = Rect2(4, 400, 128, 128)
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Monster_screen"]
layout_mode = 2
offset_left = 12.0
offset_top = 12.0
offset_right = 283.0
offset_bottom = 458.0

[node name="ButtonMonster 1" type="Button" parent="Monster_screen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true

[node name="LabelMonster 1" type="Label" parent="Monster_screen/VBoxContainer/ButtonMonster 1"]
texture_filter = 1
layout_mode = 2
offset_left = -1.0
offset_top = 1.0
offset_right = 135.0
offset_bottom = 37.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonMonster 2" type="Button" parent="Monster_screen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true

[node name="LabelMonster 2" type="Label" parent="Monster_screen/VBoxContainer/ButtonMonster 2"]
texture_filter = 1
layout_mode = 0
offset_left = -1.0
offset_top = 1.0
offset_right = 135.0
offset_bottom = 37.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonMonster 3" type="Button" parent="Monster_screen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true

[node name="LabelMonster 3" type="Label" parent="Monster_screen/VBoxContainer/ButtonMonster 3"]
texture_filter = 1
layout_mode = 0
offset_left = -1.0
offset_top = 1.0
offset_right = 135.0
offset_bottom = 37.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonMonster 4" type="Button" parent="Monster_screen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true

[node name="LabelMonster 4" type="Label" parent="Monster_screen/VBoxContainer/ButtonMonster 4"]
texture_filter = 1
layout_mode = 0
offset_left = -1.0
offset_top = 1.0
offset_right = 135.0
offset_bottom = 37.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonMonster 5" type="Button" parent="Monster_screen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true

[node name="LabelMonster 5" type="Label" parent="Monster_screen/VBoxContainer/ButtonMonster 5"]
texture_filter = 1
layout_mode = 0
offset_left = -1.0
offset_top = 1.0
offset_right = 135.0
offset_bottom = 37.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonMonster 6" type="Button" parent="Monster_screen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true

[node name="LabelMonster 6" type="Label" parent="Monster_screen/VBoxContainer/ButtonMonster 6"]
texture_filter = 1
layout_mode = 0
offset_left = -1.0
offset_top = 1.0
offset_right = 135.0
offset_bottom = 37.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Monster party 1/Button" to="." method="_on_button_pressed" binds= [0]]
[connection signal="pressed" from="Monster party 2/Button" to="." method="_on_button_pressed" binds= [1]]
[connection signal="pressed" from="Monster party 3/Button" to="." method="_on_button_pressed" binds= [2]]
[connection signal="pressed" from="Use/Button" to="." method="use_button_pressed"]
[connection signal="pressed" from="Back/Button" to="." method="back_button_pressed"]
[connection signal="pressed" from="Monster_screen/VBoxContainer/ButtonMonster 1" to="." method="_on_button_monster_pressed" binds= [0]]
[connection signal="pressed" from="Monster_screen/VBoxContainer/ButtonMonster 2" to="." method="_on_button_monster_pressed" binds= [1]]
[connection signal="pressed" from="Monster_screen/VBoxContainer/ButtonMonster 3" to="." method="_on_button_monster_pressed" binds= [2]]
[connection signal="pressed" from="Monster_screen/VBoxContainer/ButtonMonster 4" to="." method="_on_button_monster_pressed" binds= [3]]
[connection signal="pressed" from="Monster_screen/VBoxContainer/ButtonMonster 5" to="." method="_on_button_monster_pressed" binds= [4]]
[connection signal="pressed" from="Monster_screen/VBoxContainer/ButtonMonster 6" to="." method="_on_button_monster_pressed" binds= [5]]
